--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.17.1",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-splash-screen": "~0.29.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
