Update: Asset References
Removed unused asset files, as well as reorganized asset folder.

Now the contact info data, that was before hardcoded has its JSON file.

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/image/logo_food_hall.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
