--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "expo": "~52.0.40",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.17.1",
-    "react-native-web": "~0.19.13",
-    "expo-splash-screen": "~0.29.22"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
