--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/drawer": "^7.3.2",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~52.0.40",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
