--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-bootsplash": "^6.3.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-video": "^6.11.0",
     "react-native-web": "~0.19.13"
   },
