--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-video": "^6.12.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
