--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~52.0.40",
+    "expo-av": "~15.0.2",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -28,9 +29,9 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-video": "^6.12.0",
-    "react-native-web": "~0.19.13",
-    "expo-av": "~15.0.2"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
